# rust-cffi-by-cmake-demo

./: .gitignore  CMakeLists.txt  Cargo.toml  build.rs
include/libfoo/: bar.h  defines.h
src/: CMakeLists.txt  main.rs
src/cpp/: CMakeLists.txt
src/cpp/cmake/: helper.cmake  options.cmake
src/cpp/include/foo/: bar.h  bar.hpp  cmake.h  cmake.h.in  defines.h
src/cpp/lib/: CMakeLists.txt  lib.cpp
src/libfoo/: bar.c
